[gd_scene load_steps=4 format=3 uid="uid://chqqbu2i76pko"]

[ext_resource type="Script" uid="uid://cdsag3jy6md8v" path="res://scenes/ui/leaderboard_row.gd" id="1_pu1ds"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knd4k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6oma"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="LeaderbordRow" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_knd4k")
script = ExtResource("1_pu1ds")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Rank" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="PlayerName" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TitleContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_q6oma")

[node name="TitleLabel" type="Label" parent="HBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Points" type="Label" parent="HBoxContainer"]
layout_mode = 2
